--- a/src/pages/Login/style.login.css
+++ b/src/pages/Login/style.login.css
@@ -10,8 +10,9 @@ body {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    margin-top: 5%;
+    /* align-items: center; */
+    height: 120vh;
 }
 .icons {
     color: #7f8c8d;
